--- a/services/backend/tsconfig.json
+++ b/services/backend/tsconfig.json
@@ -13,6 +13,9 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
+        "types": [
+            "node"
+        ],
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true
