fix: 定向剔除 backend/dashboard 冗余扫描，开放 tsc 自动类型发现，闭锁路径风险代码

--- a/services/backend/tsconfig.json
+++ b/services/backend/tsconfig.json
@@ -15,9 +15,7 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "types": [
-            "node"
-        ],
+        "types": [],
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true
@@ -27,6 +25,7 @@
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "dashboard"
     ]
 }
