--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -30,7 +30,8 @@
         "@fastify/static": "^6.12.0",
         "@fastify/cors": "^8.4.1",
         "systeminformation": "^5.21.22",
-        "rss-parser": "^3.13.0"
+        "rss-parser": "^3.13.0",
+        "https-proxy-agent": "^7.0.2"
     },
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.8",
